Fix overlapping social links on small screens

--- a/home.css
+++ b/home.css
@@ -120,6 +120,7 @@ h1, h2, .tagline, .social {
 
 .social {
   word-spacing: .5rem;
+  line-height: 2;
 }
 
 /*
